@@ -686,7 +686,7 @@ roll 2 1: 1.000000;2.000000;3.000000;
 3 1: [up]16f bm; [up]16e; [up]16d; 16c; 16b-; 16a#-; 16g#-; 16f-; 16e-; 16d-; 16c-; 16b-- ebm; 
 bar // 95
 1 1: 2.r; 
-2 1: [with >]16g-g bm; 16f-f; 16e-e; 16d-d; 16c-c; 16b--b-; 16a--a-; 16g--g-; 16f- ebm; 8.s; 
+2 1: [with >]16g-g bm; 16f-f; 16e-e; 16d-d; 16c-c; 16b--b-; 16a--a-; 16g--g-; 16f- ebm; 8.r; 
 3 1: 2f--g-; 16f- bm; 16e-e; 16d-d; 16c-c ebm; 
 bar // 96
 1 1: 2.r; 
