@@ -3,3 +3,5 @@ NoteEdit - a music score editor
 version 2.9.0:
 	* MusicXML import/export of arbitrary text is now supported. R272
 	* Transposition now dependent on key signature, thanks to Csaba. R286
+    * MusicXML import filter now places special barlines where it should. R292
+    * MusicXML export filter now exports hidden rests like it should. R292
